--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.4.6",
     "axios": "^1.7.4",
     "framer-motion": "^11.5.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.435.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
