--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,18 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.7.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.435.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
