--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -21,6 +25,7 @@
     "lucide-react": "^0.435.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.26.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
